--- a/index.HTML
+++ b/index.HTML
@@ -82,8 +82,8 @@
                 <p>यह एक .dat फ़ाइल को तालिका में बदलता है।</p>
             </li>
             <li class="file-item">
-                <a href="project-report.pdf">
-                    <span class="file-name">प्रोजेक्ट रिपोर्ट</span>
+                <a href="NEET_Bulk_Test_scheduling.html">
+                    <span class="file-name">NEET Bulk Test File Creater</span>
                 </a>
                 <p>यह मेरे हाल के प्रोजेक्ट की विस्तृत रिपोर्ट है।</p>
             </li>
