--- a/index.HTML
+++ b/index.HTML
@@ -71,9 +71,9 @@
             <!-- यहाँ अपनी फ़ाइलों के लिंक डालें -->
             <li class="file-item">
                 <a href="race.html">
-                    <span class="file-name">ALLEN Result Generator</span>
+                    <span class="file-name">Test-Manager-Race</span>
                 </a>
-                <p>यह ALLEN के लिए एक परिणाम जनरेटर है।</p>
+                <p>यह एक परिणाम जनरेटर है।</p>
             </li>
             <li class="file-item">
                 <a href="jee-dat-to-excel.html">
@@ -91,3 +91,4 @@
     </div>
 </body>
 </html>
+
